holyc-parser/tests/corpus/passing/098-stmt-stmt-return-void.hc
U0 SE_retv() { return; }
