holyc-parser/tests/corpus/failing/014-errors-err-for-empty-cond.hc
U0 EFC_f() { for (;;) ; }
